--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "version": "0.1.0",
   "author": "GatsbyCentral.com",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.6",
     "bulma": "^0.7.0",
     "gatsby": "^2.0.0",
     "gatsby-awesome-pagination": "^0.3.3",
+    "gatsby-background-image": "^0.8.0",
     "gatsby-plugin-lodash": "^3.0.1",
     "gatsby-plugin-netlify": "^2.0.0",
     "gatsby-plugin-purgecss": "^3.1.0",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-remark-images": "^2.0.1",
     "gatsby-source-filesystem": "^2.1.6",
     "gatsby-source-wordpress": "^3.0.1",
@@ -25,6 +28,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
+    "styled-components": "^4.3.2",
     "uuid": "^3.2.1"
   },
   "keywords": [
